<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_bookmark_border_black_24dp"
            android:title="@string/menu_select_products" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_shop_black_24dp"
            android:title="@string/menu_share" />


        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/menu_cart" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_keyboard_backspace_black_24dp"
                android:title="@string/menu_slideshow" />
        </menu>
    </item>

</menu>
